# CICADA

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/cicada/: __init__.py  density.py  power.py
tests/: test_density.py  test_power.py
